fix edu team creation on admin dash
